# study-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
StudyAssistantApp/StudyAssistantApp/StudyAssistantApp/: ContentView.swift  StudyAssistantAppApp.swift
StudyAssistantApp/StudyAssistantApp/StudyAssistantApp.xcodeproj/: project.pbxproj
StudyAssistantApp/StudyAssistantApp/StudyAssistantApp.xcodeproj/project.xcworkspace/xcuserdata/adamlisnell.xcuserdatad/: UserInterfaceState.xcuserstate
StudyAssistantApp/StudyAssistantApp/StudyAssistantApp.xcodeproj/xcuserdata/adamlisnell.xcuserdatad/xcschemes/: xcschememanagement.plist
StudyAssistantApp/StudyAssistantApp/StudyAssistantApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
StudyAssistantApp/StudyAssistantApp/StudyAssistantAppTests/: StudyAssistantAppTests.swift
StudyAssistantApp/StudyAssistantApp/StudyAssistantAppUITests/: StudyAssistantAppUITests.swift  StudyAssistantAppUITestsLaunchTests.swift
src/study_assistant/: __main__.py  auto_watcher.py  config.py  document_parser.py  file_handler.py  openai_client.py  pdf_generator.py  processor.py  subject_parser.py
src/study_assistant/utils/: logger.py
